fix phone number alignment, fix phone number validation

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,9 +1,14 @@
 html,
-body {
+body,
+input {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: aliceblue;
+}
+input {
+  text-indent: 10px;
 }
 
 a {
@@ -16,7 +21,7 @@ a {
 }
 
 .phone-input {
-  font-size: 200%;
+  font-size: 1rem;
   width: 100%;
 }
 
